--- a/frontend/src/css/Overview.css
+++ b/frontend/src/css/Overview.css
@@ -161,13 +161,13 @@
   position: relative;
 }
 
-.little-box {
-  width: 300px;
-  height: 200px;
+.Overview .little-box {
+  width: 325px; 
+  height: auto; 
   background-color: #f2f2f2;
   border: 1px solid #000;
   margin: 10px;
-  padding: 1px;
+  padding: 10px;
   font-size: 13px;
 }
 
