--- a/frontend/src/css/Calendar.css
+++ b/frontend/src/css/Calendar.css
@@ -1,7 +1,6 @@
 .calendar-page {
   display: flex;
   background: #b9b9b9;
-  height: 100vh;
 }
 
 .my-rbc-container {
@@ -147,11 +146,10 @@
   margin-left: 0;
 
   width: 30%;
-  height: 90%; 
 
   border-radius: 5px;
   background: #b9b9b9;
-
+  margin-bottom: 5em;
 }
 
 .side-component {
@@ -163,8 +161,6 @@
   border-radius: 5px;
 
   width: 100%;
-  height: 30%;
-
 }
 
 .side-component-stuff {
@@ -181,10 +177,10 @@
 
 .side-component-2 {
   position: relative;
-  height: 70%;
   width: 100%;
   border-radius: 5px;
   background: #353535;
+  padding-bottom: 2em;
 }
 
 /*Pop-up*/
@@ -193,6 +189,13 @@
   flex-direction: column;
   color: #fff;
   padding: 5% 8%;
+}
+
+.task-info .scroll {
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
 }
 
 .task-info h3{
@@ -213,9 +216,25 @@
   border-radius: 4px;
   font: inherit;
   font-size: small;
-  font-weight: 500;
-
-}
+  }
+  
+  .task-info select {
+    margin-bottom: 2%;
+    padding: 0 2%;
+    height: 2.5vh;
+    box-sizing: border-box;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    font-size: small;
+  }
+  
+  .task-info select:disabled { 
+    background: hsl(0, 0%, 80%); /* Change to the desired darker color */
+    border: 1px hsl(0, 0%, 80%);
+    opacity: 1;
+    color: black;
+  }
+  
 .task-info textarea {
   padding: 0 2%;
   border: 1px solid #fff;
