--- a/frontend/src/css/ResetPassword.css
+++ b/frontend/src/css/ResetPassword.css
@@ -1,46 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap');
 
 .reset-password-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  min-height: 500px;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+@media (max-height: 600px) {
+  .reset-password-container {
+    height: auto;
+    justify-content: start;
   }
-  
-  .reset-password-form .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .reset-password-form .form-group label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .reset-password-form .form-group input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .reset-password-button {
-    width: 100%;
-    background-color: #007bff;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .reset-password-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .error-message {
-    color: #ff0000;
-    margin-bottom: 10px;
-  }
-  
+}
+
+.reset-password-content {
+  width: 50%;
+  max-width: 600px;
+  background-color: #4a4a4a;
+  padding: 60px;
+  border-radius: 15px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reset-password-content h2 {
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.reset-password-content form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reset-password-content input {
+  width: 90%;
+  padding: 20px;
+  margin-bottom: 30px;
+  border: 2px solid #bababa;
+  border-radius: 10px;
+  background-color: #dadada;
+  color: #333;
+  font-size: 1.2rem;
+}
+
+.reset-password-content button {
+  padding: 15px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 30px;
+  border: none;
+  background-color: #353535;
+  color: #fff;
+  font-size: 1.2rem;
+  transition: background-color 0.3s;
+}
+
+.reset-password-content button:hover {
+  background-color: #555;
+}
+
+.reset-password-content p {
+  color: #fff;
+  margin-top: 30px;
+  font-size: 1rem;
+}
