--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -72,6 +72,54 @@ body {
   background-color: #555;
 }
 
+/* Updated styles for the reset password form and buttons */
+.reset-password-form {
+  background-color: #4a4a4a;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.reset-password-form input {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid #bababa;
+  border-radius: 5px;
+  background-color: #dadada;
+  color: #333;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.reset-password-form button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 10px;
+  border: none;
+  background-color: #353535; /* Dark grey for buttons */
+  color: #fff; /* White text for buttons */
+  transition: background-color 0.3s;
+  width: calc(50% - 10px);
+  margin: 5px;
+}
+
+.reset-password-form button:hover {
+  background-color: #555; /* Lighter grey on hover */
+}
+
+.reset-password-form button:active {
+  background-color: #444; /* Slightly darker grey when button is clicked */
+}
+
+
 /* Additional detail sections for the profile */
 .Profile .detail-section {
   background-color: #2a2a2a; /* Slightly lighter than the main bg */
