--- a/frontend/src/css/TaskForm.css
+++ b/frontend/src/css/TaskForm.css
@@ -53,6 +53,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom:30px;
   transition: background-color 0.3s;
 }
 
@@ -101,5 +102,31 @@ textarea {
   resize: vertical;  /* Allows users to resize the textarea vertically */
   overflow-y: auto;  /* Ensures the scrollbar appears when content exceeds the height */
   font-size: 16px;
+}
+
+.success-message {
+  color: #fff;
+  background-color: #3fda59; 
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  text-align: center;
+  width: 80%; 
+  font-size: 0.9em; 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.task-form-error {
+  color: #fff;
+  background-color: #FF6666; 
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  text-align: center;
+  width: 80%; 
+  font-size: 0.9em; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
