--- a/frontend/src/css/Calendar.css
+++ b/frontend/src/css/Calendar.css
@@ -1,34 +1,44 @@
 .calendar-page {
   display: flex;
+  border-radius: 4px;
   background: #b9b9b9;
+}
+
+.main-container {
+  display: flex;
+  background: #353535;
+  border-radius: 4px;
+  width: 100%;
 }
 
 .rbc-calendar {
   background: #353535;
-  border-radius: 5px;
+  border-radius: 4px;
   margin: 1.5%;
-  padding: 2.5% 2.5%;
-  min-width: 993.383px;
-  min-height: 348.3px;
-  width: 70%;
-  height: 90%; 
+  margin-left: 0;
+  padding-left: 0;
+  width: stretch;
+  height: 100vh; 
 }
 
 /*Tool Bar*/
 .rbc-toolbar-label {
+  padding: 0;
   font-size: x-large;
   font-weight: 500;
   color: #fff;
+  border-radius: 4px;
 }
 
 .rbc-toolbar button {
   background: #353535;
   color: #fff !important;
   cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s;
 }
 
 .rbc-toolbar button:hover {
-  background-color: #555 !important;
+  background: #555 !important;
 }
 
 /*Month View*/
@@ -39,27 +49,38 @@
 .rbc-month-view .rbc-event {
   width: 100%;
   padding: 2px 1px;
-  border-radius: 8px;
+  border-radius: 4px;
+}
+.rbc-row.rbc-month-header {
+  background: #b9b9b9;
+}
+.rbc-time-view .rbc-event {
+  border: none;
 }
 .rbc-month-view .rbc-event-content {
   font-size: small;
   font-weight: 500;
   padding: 0 4px;
 }
+.rbc-time-view .rbc-event-content {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 .rbc-month-header {
   height: 28px;
   color: #fff;
 }
-
 .rbc-day-bg {
   background: #b9b9b9;
 }
 
 /*CURRENT DAY*/
 .rbc-day-bg.rbc-today {
-  border: 2px solid #9B9B9B;
-  border-radius: 2px;
+  border: 0px solid #9B9B9B;
+  border-radius: 4px;
   background-color: #eaf6ff;
 }
 
@@ -73,6 +94,7 @@
 }
 .rbc-time-view {
   background: #b9b9b9;
+  border-radius: 4px;
 }
 
 .rbc-time-view.rbc-allday-cell {
@@ -85,19 +107,16 @@
 
 
 .rbc-time-header.rbc-overflowing {
-  background: #353535;
+  background: #b9b9b9;
 }
 
 
 
-.rbc-time-view .rbc-event-content {
-  margin: 0;
-  padding:0;
-
-}
 .rbc-day-slot .rbc-event {
-  border-radius: 1px;
-  padding: 0 !important;
+  line-height: 1.9;
+  min-height: 1.4em;
+  padding: 0 3px !important;
+  padding-top: 3px !important;
 }
 .rbc-day-slot .rbc-event-label {
   padding: 0;
@@ -107,21 +126,32 @@
   background: #353535;
   font: inherit;
   color: #fff;
+  border-radius: 4px;
 }
 
 .rbc-time-gutter.rbc-time-column {
-  background: #353535;
+  background: #b9b9b9;
   color: #fff;
 }
 
 .rbc-label.rbc-time-header-gutter {
+  background: #353535;
+  border-radius: 4px !important;
+}
+
+.rbc-timeslot-group {
+  border-radius: 4px;
+}
+
+.rbc-time-gutter.rbc-time-column .rbc-time-slot {
+  border-radius: 4px;
   background: #353535;
 }
 
 .rbc-day-slot .rbc-event {
   font-size: smaller;
   font-weight: 500;
-  padding: 1px 4px;
+  padding: 0 4px;
 }
 
 
@@ -141,7 +171,6 @@
 }
 
 .rbc-current-time-indicator {
-  height: 3px;
   color: rgb(0, 253, 0);
 }
 
@@ -149,75 +178,78 @@
 .side-container {
   display: flex;
   flex-direction: column;
-
   position: relative;
-  margin: 1.5%;
-  margin-right: 0;
-  min-width: 532.717px;
-  width: 30%;
-
-  border-radius: 5px;
-  background: #b9b9b9;
+  width: 50%;
+  height: fit-content;
+  margin-top: 1.5%;
   margin-bottom: 5em;
-}
-
-.side-component {
-  margin-bottom: 5.347%;
-  Color: #fff;
   background: #353535;
-  border-radius: 5px;
-
-  width: 100%;
 }
 
 .side-component-stuff {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: #fff;
-  padding: 5% 5%;
+  background: #353535;
 }
 
-.side-component h3{
-  display: flex;
-  flex-direction: row;
+.side-component-stuff h3{
+  font-family: inherit;
+  font-weight: 500;
   text-align: center;
-  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 12px;
+  margin-left: 0;
 }
 
 .side-component-2 {
   position: relative;
   width: 100%;
-  border-radius: 5px;
   background: #353535;
   padding-bottom: 2em;
 }
 
 /*Pop-up*/
-.task-info {
+.task-info-c {
   display: flex;
   flex-direction: column;
   color: #fff;
-  margin: 5% 8%;
+  margin: 5% 5%;
+  padding: 5% 5%;
+  border-radius: 4px;
+  background: #353535;
 }
 
-.task-info .scroll {
+.task-info-c .scroll {
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
   color: #fff;
 }
 
-.task-info h3{
+.task-info-c h3{
   text-align: center;
   margin: 0;
+  font-family: inherit;
+  font-weight: 600;
 }
-.task-info label {
+
+.task-info-c h4{
+  text-align: center;
+  margin: 0;
+  font-family: inherit;
+  font-weight: 500;
+  text-decoration:overline;
+}
+.task-info-c label {
   font: inherit;
   font-size: medium;
 }
-.task-info input {
+.task-info-c input {
   margin-bottom: 2%;
-  padding: 1.5px 2%;
+  padding: 0 2%;
   height: 2.5vh;
   box-sizing: border-box;
   border: 1px solid #fff;
@@ -227,7 +259,7 @@
   font-weight: 500;
   }
   
-  .task-info select {
+  .task-info-c select {
     margin-bottom: 2%;
     padding: 0 2%;
     height: 2.5vh;
@@ -239,43 +271,44 @@
     font-weight: 500;
   }
   
-  .task-info select:disabled { 
+  .task-info-c select:disabled { 
     background: hsl(0, 0%, 80%); /* Change to the desired darker color */
     border: 1px hsl(0, 0%, 80%);
     opacity: 1;
     color: black;
   }
   
-.task-info textarea {
+.task-info-c textarea {
   padding: 0 2%;
   border: 1px solid #fff;
   border-radius: 4px;
   
   box-sizing: border-box;
-  height: 15vh;
+  height: 10vh;
 
-  font-size: medium;
+  font-size: smaller;
+  font-weight: 500;
 }
-.task-info input.read-only {
+.task-info-c input.read-only {
   background: #b9b9b9; /* Change to the desired darker color */
   border: 1px #b9b9b9;
   color: black;
 }
 
-.task-info textarea.read-only {
+.task-info-c textarea.read-only {
   background: #b9b9b9; /* Change to the desired darker color */
   border: 1px #b9b9b9;
   color: black;
 }
 
 
-.task-info button {
+.task-info-c button {
   font-family: "Poppins";
   background: #353535;
   border: 1px solid #fff;
   color: #fff;
   width: 23%;
-  border-radius: 2px;
+  border-radius: 4px;
   font-size: medium;
   font-weight: 600;
   cursor: pointer;
@@ -285,27 +318,13 @@
   display: block;
   transition: background-color 0.3s;
 }
-.task-info button:hover {
+.task-info-c button:hover {
   background-color: #555;
-}
-
-
-.filters {
-  display: flex;
-  flex-flow: column;
-  margin-left: 8%;
-}
-
-.filters input {
-  color: black;
-  font-size: large;
-  font-weight: 400;
-  width: 100%;
-  padding-left: 2%;
 }
 
 .react-datepicker {
   font-family: inherit !important;
+  background: #b9b9b9;
 }
 
 .react-datepicker__current-month {
@@ -313,7 +332,7 @@
 }
 
 .react-datepicker__day--today {
-  border-radius: 0.3rem;
+  border-radius: 4px;
   background-color: #eaf6ff !important;
   font-weight: 600;
 }
@@ -332,7 +351,19 @@
 }
 
 .react-datepicker__header {
+  border-radius: 4px;
   background-color: #353535;
+}
+
+.react-datepicker__month-container {
+  background: #b9b9b9;
+  border-radius: 4px;
+}
+
+.react-datepicker__month { 
+  background: #b9b9b9;
+  margin: 0;
+  padding: 0.4rem;
 }
 
 .react-datepicker__current-month {
@@ -356,28 +387,9 @@
 
 .task-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 0;
-  padding: 2px 20px;
-  border-radius: 2px;
+  padding: 2px 2px;
+  border-radius: 4px;
 }
 
-
-.task-info .headers {
-  display: flex;
-  flex-direction: row;
-}
-
-.task-list li {
-  display: flex;
-  flex-direction: row;
-  color: #fff;
-  padding: 2px 5px;
-  margin: 5px !important; 
-  border: 1px solid #fff;
-}
-
-.task-info li:hover {
-  cursor: pointer;
-  opacity: 0.75;
-}
