--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,15 +5,16 @@
 :root {
   --primary: #333;
   --error: #FF6666;
+  width: 100vw;
 }
-
-.pages {
-  height: 100vh;
+.main-content {
+  margin: 1px 0;
+  margin-bottom: 2.2%;
 }
-
 body {
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
   background: #f1f1f1 !important;
-  margin: 0;
   font-family: "Poppins";
 }
 
