--- a/frontend/src/css/Calendar.css
+++ b/frontend/src/css/Calendar.css
@@ -179,7 +179,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 50%;
+  width: 30%;
   height: fit-content;
   margin-top: 1.5%;
   margin-bottom: 5em;
@@ -193,6 +193,7 @@
   justify-content: center;
   color: #fff;
   background: #353535;
+  margin-bottom: 2rem;
 }
 
 .side-component-stuff h3{
@@ -205,6 +206,7 @@
 }
 
 .side-component-2 {
+  align-items: center;
   position: relative;
   width: 100%;
   background: #353535;
@@ -216,8 +218,11 @@
   display: flex;
   flex-direction: column;
   color: #fff;
-  margin: 5% 5%;
+  margin: auto;
+  margin: auto;
   padding: 5% 5%;
+  width: 70%;
+  border: 1px solid #fff;
   border-radius: 4px;
   background: #353535;
 }
@@ -388,8 +393,27 @@
 .task-list {
   display: flex;
   flex-direction: column;
-  margin: 0;
-  padding: 2px 2px;
+
+  color: #fff;
   border-radius: 4px;
+}
+
+.task-list h3{
+  text-align: center;
+  margin: 0;
+  font-family: inherit;
+  font-weight: 600;
+}
+
+.task-list h4{
+  text-align: center;
+  margin: 0;
+  font-family: inherit;
+  font-weight: 500;
+  text-decoration:overline;
+}
+
+.task-list td {
+  text-align: center;
 }
 
