--- a/frontend/src/css/Signup.css
+++ b/frontend/src/css/Signup.css
@@ -4,17 +4,17 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.verification-container {
+.signup-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 85vh;
   min-height: 500px;
   background-color: #f1f1f1;
   padding: 20px;
 }
 
-.verification-form {
+.signup-form-container {
   background-color: #4a4a4a;
   padding: 60px;
   border-radius: 15px;
@@ -24,27 +24,20 @@ body {
   max-width: 600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start; /* Align children to the start, affecting the labels */
 }
 
-.verification-form h2 {
+.signup-form-container h2 {
   text-align: center;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   font-size: 24px;
   line-height: 60px;
   width: 100%;
 }
 
-.verification-form label {
-  align-self: flex-start;
-  margin-left: 2%;
-  font-size: 1rem;
-  color: #fff;
-}
-
-.verification-form input {
-  width: 90%;
+.signup-form-container input {
+  width: calc(100% - 40px); /* 100% width minus the total horizontal padding */
   padding: 20px;
   margin-bottom: 30px;
   border: none;
@@ -52,10 +45,21 @@ body {
   background-color: #dadada;
   color: #333;
   font-size: 1.2rem;
+  display: block; /* Ensures the input takes the full width available */
 }
 
-.verification-form button {
-  padding: 15px 30px;
+.signup-form-container label {
+  text-align: left;
+  margin-bottom: 0px;
+  color: #fff;
+  font-size: 1rem;
+  width: 100%; /* Ensures label takes full width available */
+  padding-left: 5px; /* Aligns the text with the input fields */
+  display: block; /* Ensures the label takes the full width available */
+}
+
+.signup-form-container button {
+    padding: 15px 30px;
     border-radius: 10px;
     cursor: pointer;
     margin-top: 30px;
@@ -66,25 +70,24 @@ body {
     font-weight: bold;
     transition: background-color 0.3s;
     align-self: center;
-}
+  }
 
-.verification-form button:hover {
+.signup-form-container button:hover {
   background-color: #555;
 }
 
-.error, .success {
-  width: 90%; /* Match input width */
-  padding: 1em;
-  border-radius: 0.5em;
-  display: block;
-  text-align: center;
-  margin: 0 auto 20px; /* Center and add spacing */
+.signup-form-container .error {
+  color: #ff3860;
+  margin-top: 10px;
 }
 
-.error {
-  background-color: #ffc2c2;
-}
+@media (max-width: 768px) {
+  .signup-form-container {
+    width: 90%;
+  }
 
-.success {
-  background-color: #3fda59;
+  .signup-form-container button {
+    width: 100%;
+  }
+  
 }
