--- a/frontend/src/css/Users.css
+++ b/frontend/src/css/Users.css
@@ -7,6 +7,42 @@
   margin: 20px;
 }
 
+.users-search-sort {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.users-search-input, .users-sort-select {
+  padding: 8px;
+  margin-right: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: #dadada;
+  color: #000;
+}
+
+.users-search-input {
+  padding: 8px;
+  margin-right: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: #dadada;
+  color: #000;
+  width: 20%;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+}
+
+.users-sort-select {
+  flex-grow: 0;
+  background-color: #dadada;
+}
+
+.user-name, .user-email {
+  flex-basis: auto;
+}
+
 .users-container h1 {
   margin-top: 0;
   color: #ffffff;
@@ -26,9 +62,9 @@
   border-radius: 5px;
   display: flex;
   align-items: center;
-  justify-content: flex-start; /* Align items to the left */
-  transition: transform 0.2s, box-shadow 0.2s; /* Smooth transitions for hover effects */
-  will-change: transform; /* Optimize for animations */
+  justify-content: flex-start;
+  transition: transform 0.2s, box-shadow 0.2s;
+  will-change: transform;
   transition: all 0.3s ease;
   opacity: 0.7;
   transform: translateX(-5px);
@@ -37,22 +73,22 @@
 .user-item:hover {
   opacity: 1;
   transform: translateX(0);
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Elevated shadow effect */
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
 .icon {
   margin-right: 8px;
-  font-size: 1.5rem; /* Adjust the size as necessary */
+  font-size: 1.5rem;
 }
 
 .user-name, .user-email {
-  margin: 0 16px 0 8px; /* Adjust space to your preference */
+  margin: 0 16px 0 8px;
 }
 
 .delete-button {
   background-color: transparent;
-  border: none; /* No border around the button */
-  margin-left: auto; /* Push the button to the end */
+  border: none;
+  margin-left: auto;
   cursor: pointer;
   padding: 8px;
   display: flex;
